# event_system

./: .gitignore  CMakeLists.txt  README.md  setup.sh
src/: ADelegate.hpp  EventListener.hpp  EventSystem.hpp  Exceptions.hpp  GDelegate.hpp  TDelegate.hpp  VDelegate.hpp
test/src/: Events_DelegateTest.cpp  Events_ProcessDataListenerTest.cpp  Events_SimpleListenerTest.cpp  Events_ThreadEventListenerTest.cpp  ProcessDataListener.hpp  SimpleListener.hpp  TestEventSystem.hpp  TestType.hpp  ThreadEventListener.hpp
